--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "bootstrap": "4.6.0",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
+    "vue-sweetalert2": "^5.0.11",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
