--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.3.1",
     "axios": "^1.7.2",
     "bootstrap": "4.6.0",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.2.0",
+    "jwt-decode": "^4.0.0",
+    "vee-validate": "^3.4.15",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
