--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@asika32764/vue-animate": "^3.0.2",
     "@flaticon/flaticon-uicons": "^3.3.1",
     "axios": "^1.7.2",
     "bootstrap": "4.6.0",
