--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vee-validate": "^3.4.15",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
+    "vue-js-modal": "^2.0.1",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vue-sweetalert2": "^5.0.11",
